<resources>
    <string name="app_name">NannyApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_add_email">Please add your email address</string>
    <string name="nanny">Nanny</string>
    <string name="parent">Parent</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="logout">Logout</string>
    <string name="menu_parent">Nannies</string>
    <string name="menu_nanny">Parents</string>
    <string name="profile">Profile</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="description">Description</string>
    <string name="save">Save</string>

    <!-- Profile mandatory text fields -->
    <string name="mandatory_first_name">First name <font color='#FF0000'>*</font></string>
    <string name="mandatory_last_name">Last name <font color='#FF0000'>*</font></string>
    <string name="mandatory_phone_number">Phone number <font color='#FF0000'>*</font></string>
    <string name="mandatory_number_of_children">Number of children <font color='#FF0000'>*</font></string>
    <string name="mandatory_email">Email <font color='#FF0000'>*</font></string>
    <string name="mandatory_address">Address <font color='#FF0000'>*</font></string>
    <string name="mandatory_description">Description <font color='#FF0000'>*</font></string>
    <string name="mandatory_date_of_birth">Date of birth <font color='#FF0000'>*</font></string>
    <string name="mandatory_skills">Skills <font color='#FF0000'>*</font></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="skills">Skills</string>
    <string name="job_description">Job description</string>
    <string name="number_of_children">Number of children</string>
    <string name="leave_review">Leave a review</string>
    <string name="experience">Experience</string>

</resources>