<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_parent"
            android:icon="@drawable/ic_menu_parent"
            android:title="@string/menu_parent" />
        <item
            android:id="@+id/nav_nanny"
            android:icon="@drawable/ic_menu_nanny"
            android:title="@string/menu_nanny" />

        <item
            android:id="@+id/nav_nanny_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_parent_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/profile" />
    </group>
</menu>