<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nannyapp.main.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_parent"
        android:name="com.example.nannyapp.main.ui.users.ParentFragment"
        android:label="@string/menu_parent"
        tools:layout="@layout/fragment_parent" />
    <fragment
        android:id="@+id/nav_nanny"
        android:name="com.example.nannyapp.main.ui.users.NannyFragment"
        android:label="@string/menu_nanny"
        tools:layout="@layout/fragment_nanny" />
    <fragment
        android:id="@+id/nav_parent_profile"
        android:name="com.example.nannyapp.main.ui.profile.ParentProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_parent_profile" />
    <fragment
        android:id="@+id/nav_nanny_profile"
        android:name="com.example.nannyapp.main.ui.profile.NannyProfileFragment"
        android:label="@string/profile" >
        <action
            android:id="@+id/action_nav_nanny_profile_to_parentDetailsFragment"
            app:destination="@id/parent_details" />
    </fragment>
    <fragment
        android:id="@+id/parent_details"
        android:name="com.example.nannyapp.main.ui.details.ParentDetailsFragment"
        android:label="Details"
        tools:layout="@layout/fragment_parent_details" />
</navigation>