<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.profile.ParentProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="46dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/nanny_profile_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="150dp" />

            <EditText
                android:id="@+id/nanny_profile_date_of_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nanny_profile_guideline"
                app:layout_constraintTop_toBottomOf="@+id/nanny_profile_phone_number"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <EditText
                android:id="@+id/nanny_profile_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nanny_profile_guideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/nanny_profile_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_border"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nanny_profile_text_address" />

            <EditText
                android:id="@+id/nanny_profile_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nanny_profile_guideline"
                app:layout_constraintTop_toBottomOf="@+id/nanny_profile_first_name" />

            <TextView
                android:id="@+id/nanny_profile_text_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/mandatory_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nanny_profile_text_date_of_birth" />

            <Button
                android:id="@+id/nanny_profile_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nanny_profile_experience" />

            <TextView
                android:id="@+id/nanny_profile_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mandatory_first_name"
                app:layout_constraintBottom_toBottomOf="@+id/nanny_profile_first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nanny_profile_first_name" />

            <TextView
                android:id="@+id/nanny_profile_text_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mandatory_last_name"
                app:layout_constraintBottom_toBottomOf="@+id/nanny_profile_last_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nanny_profile_last_name" />

            <TextView
                android:id="@+id/nanny_profile_text_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mandatory_email"
                app:layout_constraintBottom_toBottomOf="@+id/nanny_profile_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nanny_profile_email" />

            <EditText
                android:id="@+id/nanny_profile_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nanny_profile_guideline"
                app:layout_constraintTop_toBottomOf="@+id/nanny_profile_last_name" />

            <EditText
                android:id="@+id/nanny_profile_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nanny_profile_guideline"
                app:layout_constraintTop_toBottomOf="@+id/nanny_profile_email" />

            <TextView
                android:id="@+id/nanny_profile_text_skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/mandatory_skills"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nanny_profile_address" />

            <EditText
                android:id="@+id/nanny_profile_skills"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_border"
                android:elegantTextHeight="true"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/skills"
                android:inputType="textMultiLine"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nanny_profile_text_skills" />

            <TextView
                android:id="@+id/nanny_profile_text_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mandatory_date_of_birth"
                app:layout_constraintBottom_toBottomOf="@+id/nanny_profile_date_of_birth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nanny_profile_date_of_birth" />

            <TextView
                android:id="@+id/nanny_profile_text_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mandatory_phone_number"
                app:layout_constraintBottom_toBottomOf="@+id/nanny_profile_phone_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nanny_profile_phone_number" />

            <TextView
                android:id="@+id/nanny_text_profile_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="Experience"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nanny_profile_skills" />

            <EditText
                android:id="@+id/nanny_profile_experience"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_border"
                android:elegantTextHeight="true"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Experience"
                android:inputType="textMultiLine"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nanny_text_profile_experience" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>